# WAYD

./: .gitignore  LICENSE  README.md  next.config.js  package.json
pages/: _app.tsx  _document.tsx  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
styles/: globals.css
